@startuml

package "Módulo Raíz" {
    class AppModule <<Module>> {
    }
}

package "Módulo de Usuarios" {
    class UsersModule <<Module>> {
    }

    enum Role {
        ADMIN
        USER
        PUBLIC
    }

    class UsersController {
        + login(body: LoginDto): Object
        + register(body: RegisterDto): Object
    }

    class UsersService {
        + login(loginDto: LoginDto): Object
        + register(registerDto: RegisterDto): Object
    }

    class UserEntity {
        - id{CK}: number
        - nombre: string
        - apellido: string
        - email: string
        - contrasena: string
        - telefono: string
        - rol: Role
        - publications: Publication[]
    }
    
    ' Composición: El módulo controla el ciclo de vida de sus componentes
    UsersModule "1" *-- "1" UsersController : declara
    UsersModule "1" *-- "1" UsersService : provee
    
    ' Asociación: El controlador usa el servicio
    UsersController "1" --> "1" UsersService : usa
    UsersService "1" --> "1" UserEntity : gestiona
    UserEntity "1" --> "1" Role : tiene
}

package "Módulo de Publicaciones" {
    class PublicationsModule <<Module>> {
    }

    class PublicationsController {
        + create(dto: CreatePublicationDto): Object
        + findAll(): Object[]
        + findByUser(userId: string): Object[]
        + findOne(id: string): Object
        + update(id: string, dto: UpdatePublicationDto): Object
        + remove(id: string): Object
    }

    class PublicationsService {
        + create(dto: CreatePublicationDto): Publication
        + findAll(): Publication[]
        + findByUser(userId: number): Publication[]
        + findByInitialText(term: string): Publication[]
        + findOne(id: number): Publication
        + update(id: number, dto: UpdatePublicationDto): Publication
        + remove(id: number): Publication
    }

    class Publication {
        - id{CK}: number
        - name: string
        - lote: string
        - expirationDate: Date
        - description: string
        - additionalInfo: string
        - type: string
        - isActive: boolean
        - user: UserEntity
    }

    ' Composición
    PublicationsModule "1" *-- "1" PublicationsController : declara
    PublicationsModule "1" *-- "1" PublicationsService : provee
    
    ' Asociación
    PublicationsController "1" --> "1" PublicationsService : usa
    PublicationsService "1" --> "0..*" Publication : gestiona
}

' Agregación: El módulo raíz agrupa a los módulos hijos
AppModule "1" o-- "1" UsersModule : importa
AppModule "1" o-- "1" PublicationsModule : importa

' Agregación: Un usuario agrupa publicaciones
UserEntity "1" o-- "0..*" Publication : publica

@enduml
